--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-7">
                         <div class="home-text">
-                            <h1>Best Mobile App Template for your Business</h1>
+                            <h1>Mobile App Template for your Business</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing,vestibulum bibendum sociis ac, litora justo fermentum nulla porta.</p>
                             <div class="home-btn">
                                 <a href="" class="btn btn-1 mt-4" data-scroll-goto="3">download app</a>
