--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <i class="fas fa-chevron-up"></i>
         </div>
 
-        <section class="home d-flex align-items-center" data-scroll-index="0">
+        <!-- <section class="home d-flex align-items-center" data-scroll-index="0">
             <div class="effect-wrap">
                 <i class="fas fa-plus effect effect-1"></i>
                 <i class="fas fa-plus effect effect-2"></i>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <section class="features my-5" data-scroll-index="1">
