--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <i class="fas fa-chevron-up"></i>
         </div>
 
-        <!-- <section class="home d-flex align-items-center" data-scroll-index="0">
+        <section class="home d-flex align-items-center" data-scroll-index="0">
             <div class="effect-wrap">
                 <i class="fas fa-plus effect effect-1"></i>
                 <i class="fas fa-plus effect effect-2"></i>
@@ -67,7 +67,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-7">
                         <div class="home-text">
-                            <h1>Mobile App Template for your Business</h1>
+                            <h1>Best Mobile App Template for your Business</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing,vestibulum bibendum sociis ac, litora justo fermentum nulla porta.</p>
                             <div class="home-btn">
                                 <a href="" class="btn btn-1 mt-4" data-scroll-goto="3">download app</a>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
 
         <section class="features my-5" data-scroll-index="1">
